# batchman_prover_bench

./: README.md  batchman_investigation.md  run  run_arithm  run_bool
emp-zk/emp-vole/: mock_cot.h  mock_vole.h
emp-zk/emp-zk-arith/: batched_disjunction.h  emp-zk-arith.h  ostriple.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
emp-zk/emp-zk-bool/: batched_disjunction.h  bool_io.h  emp-zk-bool.h  ostriple.h  polynomial.h  zk_bool_circuit_exec.h  zk_prover.h  zk_verifier.h
pcs-mode/: Cargo.toml
pcs-mode/src/: bench_binius.rs  main.rs  main_v2.rs
test/: CMakeLists.txt
test/arith/: stack_batched_matmul_v1.cpp  stack_batched_matmul_v2.cpp
test/bench/: batchman.cpp  batchman_bool.cpp  batchman_prover.cpp  batchman_verifier.cpp
