[package]
name = "pcs-mode"
version = "0.1.0"
edition = "2021"
description = "PCS mode for the Batchman protocol: replaces LPZK with polynomial commitment-based subset proof"

[features]
baby-bear = ["p3-baby-bear"]
koala-bear = ["p3-koala-bear"]

[dependencies]
p3-field = "0.4"
p3-goldilocks = "0.4"
p3-baby-bear = { version = "0.4", optional = true }
p3-koala-bear = { version = "0.4", optional = true }
p3-fri = "0.4"
p3-commit = "0.4"
p3-merkle-tree = "0.4"
p3-symmetric = "0.4"
p3-challenger = "0.4"
p3-matrix = "0.4"
p3-dft = "0.4"
p3-util = "0.4"
p3-poseidon2 = "0.4"
p3-blake3 = "0.4"
rand = "0.9"
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "bench_v2"
path = "src/main_v2.rs"
