[package]
name = "pcs-mode"
version = "0.1.0"
edition = "2021"
description = "PCS mode for the Batchman protocol: replaces LPZK with polynomial commitment-based subset proof"

[features]
baby-bear = ["p3-baby-bear"]
koala-bear = ["p3-koala-bear"]

[dependencies]
p3-field = "0.4"
p3-goldilocks = "0.4"
p3-baby-bear = { version = "0.4", optional = true }
p3-koala-bear = { version = "0.4", optional = true }
p3-fri = "0.4"
p3-commit = "0.4"
p3-merkle-tree = "0.4"
p3-symmetric = "0.4"
p3-challenger = "0.4"
p3-matrix = "0.4"
p3-dft = "0.4"
p3-util = "0.4"
p3-poseidon2 = "0.4"
p3-blake3 = "0.4"
rand = "0.9"
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Binius dependencies (from GitHub main branch)
binius_core = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_field = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_ntt = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_math = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_compute = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
binius_maybe_rayon = { git = "https://github.com/IrreducibleOSS/binius", default-features = false }
bytemuck = "1"
blake3 = "1"
digest = "0.10"

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "bench_v2"
path = "src/main_v2.rs"

[[bin]]
name = "bench_binius"
path = "src/bench_binius.rs"
